# pinnacle

./: .gitignore  Cargo.toml  README.md  qemu  rust-toolchain.toml
pki/: gen-pki.sh  sign.sh
src/: bootorder.rs  input.rs  log.rs  main.rs  pcr.rs
